use Paths.get instead of Path.of